# gameDevLearning

./: notes.txt
Brommando/: pyproject.toml
Brommando/brommando/: main.py
Brommando/brommando/assets/artwork/: brommando_logo.psd
RockStickBash/: pyproject.toml
RockStickBash/rockstickbash/: main.py  tasks.txt
RockStickBash/rockstickbash/assets/: config.py  sprites.py
Runner/: pyproject.toml
Runner/runner/: main.py  runner_classOnly.py  runner_video.py
miscTutorial/: pyproject.toml
miscTutorial/misctutorial/: main.py
miscTutorial/misctutorial/assets/: config.py  sprites.py
topDown/: pyproject.toml
topDown/topdown/: main.py  settings.py  test.py
topDown/topdown/assets/: game_funcs.py
topDown/topdown/assets/graphics/character/actions/: sprite adjust 2.psd  sprite adjust 3.psd  sprite adjust.psd  sprite_bunny_movement.psd  srpite_final_bunny.psd
