[tool.poetry]
name = "topdown"
version = "0.1.0"
description = "TopDown Shooter Dev"
authors = ["Ken Davis <kd_112@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
